--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -42,6 +42,6 @@
 
 <style>
   .katex { line-height: 1 !important; }
-  .antex.display { display: flex; }
+  .antex.display { display: flex; padding: 1em; }
   .antex.display > img { margin: 0 auto !important; }
 </style>
