--- a/assets/style.scss
+++ b/assets/style.scss
@@ -3,12 +3,34 @@
 
 @import "{{ site.theme }}";
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap');
 
 body {
   font-family: "Roboto";
   font-size: 12pt;
+}
+
+h1,h2,h3,h4,h5  {
+  font-family: "Roboto" !important;
+  font-weight: bold !important;
+}
+
+h1 {
+  font-size: 2.3em !important;
+}
+
+h2 {
+  font-size: 1.5em !important;
+  margin-block-end: .4em;
+}
+
+h3 {
+  font-size: 1.2em !important;
+  margin-block-end: .4em;
+}
+
+h4 {
+  font-size: 1em !important;
+  margin-block-end: .4em;
 }
 
