--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -1,5 +1,5 @@
 /** Reset some basic elements */
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap");
 body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure { margin: 0; padding: 0; }
 
 /** Basic styling */
@@ -197,3 +197,13 @@ table td { border: 1px solid #e8e8e8; }
 .highlight .il { color: #099; }
 
 body { font-family: "Roboto"; font-size: 12pt; }
+
+h1, h2, h3, h4, h5 { font-family: "Roboto" !important; font-weight: bold !important; }
+
+h1 { font-size: 2.3em !important; }
+
+h2 { font-size: 1.5em !important; margin-block-end: .4em; }
+
+h3 { font-size: 1.2em !important; margin-block-end: .4em; }
+
+h4 { font-size: 1em !important; margin-block-end: .4em; }
