--- a/assets/style.scss
+++ b/assets/style.scss
@@ -21,16 +21,25 @@ h1 {
 
 h2 {
   font-size: 1.5em !important;
+  margin-top: 1.7em;
   margin-block-end: .4em;
 }
 
 h3 {
   font-size: 1.2em !important;
+  margin-top: 1.7em;
   margin-block-end: .4em;
 }
 
 h4 {
   font-size: 1em !important;
+  margin-top: 1.7em;
   margin-block-end: .4em;
 }
 
+
+.page__subtitle {
+  font-size: 1.5em;
+  font-weight: 500;
+  font-style: italic;
+}
