checkpoint (mostly working)

--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -1,6 +1,11 @@
-<nav>
-  <h4>Table of Contents</h4>
-  * this unordered seed list will be replaced by toc as unordered list
-  {:toc}
-</nav>
+<ul class="toc">
+  {% for p in include.toc[include.slug] %}
+  <li>
+    <a class="slug" href="{{site.baseurl}}/nodes/{{p.slug}}.html">[{{p.slug}}]</a>
+    <a href="#{{p.slug}}">{{p.title}}</a>
+    {{p.subpages}}
+    {%include toc.html toc=include.toc slug=p.slug%}
+  </li>
+  {% endfor %}
+</ul>
 
