hooking up new TOC code

--- a/_layouts/import.html
+++ b/_layouts/import.html
@@ -1,6 +1,6 @@
 <h{{page.level}} id="{{page.slug}}">
   {{page.title}}
-<a href="{{page.target}}" class="slug">[{{page.slug}}]</a>
+<a class="slug" href="{{site.baseurl}}/nodes/{{page.slug}}.html">[{{page.slug}}]</a>
 </h{{page.level}}>
 
 <section class="import">
