--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -31,7 +31,7 @@ layout: default
 
   {% if page.superpages %}
   <nav>
-    <h4>Upwards</h4>
+    <h4>Context</h4>
     <ul>
       {% for p in page.superpages %}
       <li>
