--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,12 @@ layout: default
   {% install_graph %}
 
   <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}</h1>
+    <h1 class="post-title">
+      {{ page.title | escape }}
+      {% if page.collection == "nodes" %}
+      <span class="slug">[{{page.slug}}]</span>
+      {% endif %}
+    </h1>
     {% if page.subtitle %}
     <p id="page-subtitle" class="page__subtitle p-name" itemprop="headline">
     {{ page.subtitle }}
@@ -35,7 +40,12 @@ layout: default
     <ul>
       {% for p in page.cotoc[page.slug] %}
       <li>
-        <a href="{{p.url | relative_url}}">{{p.title}}</a>
+        <a href="{{p.url | relative_url}}">
+          {{p.title}}
+          {% if p.collection == "nodes" %}
+          <span class="slug">[{{p.slug}}]</span>
+          {% endif %}
+        </a>
       </li>
       {% endfor %}
     </ul>
@@ -48,7 +58,12 @@ layout: default
     <ul>
       {% for p in page.referents[page.slug] %}
       <li>
-        <a href="{{p.url | relative_url}}">{{p.title}} <span class="slug">[{{p.slug}}]</a>
+        <a href="{{p.url | relative_url}}">
+          {{p.title}}
+          {% if p.collection == "nodes" %}
+          <span class="slug">[{{p.slug}}]</span>
+          {% endif %}
+        </a>
       </li>
       {% endfor %}
     </ul>
