--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -2,10 +2,7 @@
   {% for p in include.toc[include.slug] %}
   <li>
     <a class="slug" href="{{p.url | relative_url}}">[{{p.slug}}]</a>
-    <a href="#{{p.slug}}">
-      {{p.index_str}}
-      {{p.title}}
-    </a>
+    <a href="#{{p.slug}}">{{p.title}}</a>
     {%include toc.html toc=include.toc slug=p.slug%}
   </li>
   {% endfor %}
