--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -1,9 +1,9 @@
 <ul class="toc">
-  {% for p in include.toc[include.slug] %}
+  {% for resource in include.page.children %}
   <li>
-    <a class="slug" href="{{p.url | relative_url}}">[{{p.slug}}]</a>
-    <a href="#{{p.slug}}">{{p.title}}</a>
-    {%include toc.html toc=include.toc slug=p.slug%}
+    <a class="slug" href="{{resource.url | relative_url}}">[{{resource.slug}}]</a>
+    <a href="#{{resource.slug}}">{{resource.title}}</a>
+    {% include toc.html page=resource %}
   </li>
   {% endfor %}
 </ul>
