--- a/assets/style.scss
+++ b/assets/style.scss
@@ -13,26 +13,27 @@ body {
 h1,h2,h3,h4,h5,h6  {
   font-family: "Roboto" !important;
   font-weight: bold !important;
-  margin-top: 0.2em;
 }
 
 h1 {
-  font-size: 2.3em !important;
+  font-size: 2em !important;
 }
 
 h2 {
   font-size: 1.5em !important;
   margin-block-end: .4em;
+  margin-top: 1.5em;
 }
 
 h3 {
   font-size: 1.2em !important;
   margin-block-end: .4em;
+  margin-top: .3em;
 }
 
 h4 {
   font-size: 1.1em !important;
-  margin-top: 1.2em;
+  margin-top: .3em;
   margin-block-end: .4em;
 }
 
