--- a/_layouts/node.html
+++ b/_layouts/node.html
@@ -6,6 +6,7 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">
+      {{ page.breadcrumb }}
       {{ page.title | escape }}
       {% if page.collection == "nodes" %}
       <span class="slug">[{{page.slug}}]</span>
