--- a/_includes/list.html
+++ b/_includes/list.html
@@ -2,7 +2,7 @@
   {% for resource in include.list %}
   <li>
     <a href="{{resource.url | relative_url}}">
-      {{resource.breadcrumb}}
+      {{resource.numbering}}
       {{resource.title}}
       {% if resource.collection == "nodes" %}
       <span class="slug">[{{resource.slug}}]</span>
