--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -1,7 +1,7 @@
 <ul class="toc">
   {% for resource in include.page.children %}
   <li>
-    {{ resource.numbering }}
+    {{ resource.iso_2145 | append: "." }}
     <a href="#{{resource.slug}}">{{resource.title}}</a>
     <a class="slug" href="{{resource.url | relative_url}}">[{{resource.slug}}]</a>
     {% include toc.html page=resource %}
