--- a/_layouts/node.html
+++ b/_layouts/node.html
@@ -5,6 +5,8 @@ layout: default
 <article class="post">
 
   <header class="post-header">
+    {% include breadcrumbs.html list=page.ancestors %}
+
     <h1 class="post-title">
       {% if page.collection == "nodes" %}
       <span class="numbering">{{ page.iso_2145 | append: "." }}</span>
