--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -1,5 +1,6 @@
 <ul class="toc">
-  {% for resource in include.page.children %}
+  {% assign filtered_resources = include.page.children | where: "toc", true -%}
+  {% for resource in filtered_resources %}
   <li>
     {{ resource.iso_2145 | append: "." }}
     <a href="#{{resource.slug}}">
