--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -10,7 +10,7 @@
   {% for resource in include.list %}
     <a href="{{resource.url | relative_url}}">
       {% if resource.collection == "nodes" %}
-      <span class="numbering">{{ resource.iso_2145 | append: "." }}</span>
+      <span class="numbering">{{ resource.clicks | to_numbering }}</span>
       {% endif %}
       {{resource.title}}
       {% if resource.collection == "nodes" %}
