--- a/_includes/list.html
+++ b/_includes/list.html
@@ -3,7 +3,7 @@
   <li>
     <a href="{{resource.url | relative_url}}">
       {% if resource.collection == "nodes" %}
-      <span class="numbering">{{ resource.iso_2145 | append: "." }}</span>
+      <span class="numbering">{{ resource.clicks | to_numbering }}</span>
       {% endif %}
       {{resource.title}}
       {% if resource.collection == "nodes" %}
