--- a/_layouts/sheafy/tree/default.html
+++ b/_layouts/sheafy/tree/default.html
@@ -9,7 +9,7 @@ layout: default
 
     <h1 class="post-title">
       {% if page.collection == "nodes" %}
-        <span class="numbering">{{ page.iso_2145 | append: "." }}</span>
+        <span class="numbering">{{ page.clicks | to_numbering }}</span>
       {% endif %}
       {% if page.title != page.slug %}
         {{ page.title }}
