feat: use sublayouts for headings; replace topmost with subroot

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -71,3 +71,9 @@ div.bibtex-code {
 header.post-header {
   margin-bottom: 1em !important;
 }
+
+header.inline {
+  float: left;
+  display: inline;
+  margin-right: 1ex;
+}
