--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -1,8 +1,17 @@
 <ul class="toc">
-  {% for resource in include.page.children %}
+  {% assign filtered_resources = include.page.children | where: "taxon", "section" -%}
+  {% for resource in filtered_resources %}
   <li>
-    {{ resource.iso_2145 | append: "." }}
-    <a href="#{{resource.slug}}">{{resource.title}}</a>
+    {{ resource.clicks | to_numbering }}
+    <a href="#{{resource.slug}}">
+      {%- if resource.title != resource.slug -%}
+        {{ resource.title }}
+      {%- elsif resource.genus -%}
+        {{ resource.genus }}
+      {%- else -%}
+        {{ resource.slug }}
+      {%- endif -%}
+    </a>
     <a class="slug" href="{{resource.url | relative_url}}">[{{resource.slug}}]</a>
     {% include toc.html page=resource %}
   </li>
