--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -2,7 +2,7 @@
   {% assign filtered_resources = include.page.children | where: "taxon", "section" -%}
   {% for resource in filtered_resources %}
   <li>
-    {{ resource.clicks | to_numbering }}
+    {{ resource.clicks | to_numbering }}.
     <a href="#{{resource.slug}}">
       {%- if resource.title != resource.slug -%}
         {{ resource.title }}
