further hack to fix layout of result nodes

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -81,6 +81,10 @@ header.inline + p {
   display: inline;
 }
 
+header.inline + p + * {
+  margin-top: 10px;
+}
+
 header.inline .numbering {
   font-weight: bold;
 }
