--- a/_includes/d-pad.html
+++ b/_includes/d-pad.html
@@ -2,29 +2,36 @@
   nav.d-pad {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
+    flex-wrap: wrap;
     margin: 3rem 0rem 4rem 0rem;
+    gap: 0.6rem;
   }
 
   nav.d-pad i.arrow {
     display: inline-block;
     font-style: normal;
     position: relative;
-    width: 0.4em;
-    height: 0.4em;
+    width: 0.6em;
+    height: 0.6em;
     border: 0.2em solid black;
     border-bottom: unset;
     border-left: unset;
+    box-sizing: border-box;
   }
   nav.d-pad i.arrow.left {
     transform: rotate(-135deg);
   }
   nav.d-pad i.arrow.up {
     transform: rotate(-45deg);
+    margin: 0.2rem; /* emulates spacing of right/left arrows */
+    vertical-align: middle;
   }
   nav.d-pad i.arrow.right {
     transform: rotate(45deg);
   }
+  nav.d-pad a.prev { text-align: right; }
+  nav.d-pad a.next { text-align: left; }
 </style>
 
 <nav class="d-pad">
@@ -36,19 +43,21 @@
 {% assign next = node_with_succ.successors | first %}
 
 {% if prev %}
-  <a href="{{prev.url | relative_url}}">
+  <a class="prev" href="{{prev.url | relative_url}}">
     {% if node_with_pred == page %}
       <i class="arrow left"></i>
     {% else %}
       <i class="arrow up"></i>
     {% endif %}
-    {{ prev | display_title }}
-    <span class="slug">[{{prev.slug}}]</span>
+    <span>
+      {{ prev | display_title }}
+      <span class="slug">[{{prev.slug}}]</span>
+    </span>
   </a>
 {% endif %}
 
 {% if next %}
-  <a href="{{next.url | relative_url}}">
+  <a class="next" href="{{next.url | relative_url}}">
     {{ next | display_title }}
     <span class="slug">[{{next.slug}}]</span>
     {% if node_with_succ == page %}
