--- a/_layouts/sheafy/tree/default.html
+++ b/_layouts/sheafy/tree/default.html
@@ -24,6 +24,9 @@ layout: default
     flex-basis: 100%;
     margin: 0;
   }
+  #search-form .hint summary {
+    font-size: small;
+  }
 </style>
 
 <script src="{{ 'assets/in_page_search.js' | relative_url }}"></script>
@@ -34,7 +37,18 @@ layout: default
     <input autocomplete="off" type="search" id="search-query" name="q" placeholder="Search...."/>
     <button type="submit">Search</button>
     <button type="reset">Clear</button>
-    <p class="hint">Some hints about searching effectively should be here.</p>
+    <details class="hint">
+      <summary>Click here for help.</summary>
+      <ul>
+        <li>You can type your query in the input box, click "Search" to start the search, and click "Clear" to clear the page.</li>
+        <li>Once the search is completed, matches will be highlighted and nodes with no matches will be folded. You can expand them by clicking.</li>
+        <li>Multiple terms are allowed in the query and the default behaviour is <code>OR</code>ing them.</li>
+        <li><code>*foo</code>, <code>f*o</code>, and <code>fo*</code> are all allowed wildcards.</li>
+        <li><code>+foo</code> makes a term mandatory, while <code>-foo</code> makes a term forbidden.</li>
+        <li><code>foo~n</code> fuzzy matches within edit distance <code>n</code> (a positive number) from the term.</li>
+        <li>Note that the URL changes after a search. You can copy and paste it to share your search results. They will be displayed immediately upon visiting the URL.</li>
+      </ul>
+    </details>
   </fieldset>
 </form>
 
