feat: explain ANDing

--- a/_layouts/sheafy/tree/default.html
+++ b/_layouts/sheafy/tree/default.html
@@ -42,7 +42,7 @@ layout: default
       <ul>
         <li>You can type your query in the input box, click "Search" to start the search, and click "Clear" to clear the page.</li>
         <li>Once the search is completed, matches will be highlighted and nodes with no matches will be folded. You can expand them by clicking.</li>
-        <li>Multiple terms are allowed in the query and the default behaviour is <code>OR</code>ing them.</li>
+        <li>Multiple terms are allowed in the query and the default behaviour is <code>OR</code>ing them. You can <code>AND</code> terms making them mandatory, see <code>+foo</code> below.</li>
         <li><code>*foo</code>, <code>f*o</code>, and <code>fo*</code> are all allowed wildcards.</li>
         <li><code>+foo</code> makes a term mandatory, while <code>-foo</code> makes a term forbidden.</li>
         <li><code>foo~n</code> fuzzy matches within edit distance <code>n</code> (a positive number) from the term.</li>
