--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
         </label>
 
         <div class="trigger">
-          <a class="page-link" id="search-toggle">Search</a>
+          {% if page.taxon %}<a class="page-link" id="search-toggle">Search</a>{% endif %}
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title -%}
