feat: hide TOC items w/o matches

--- a/_layouts/sheafy/tree/default.html
+++ b/_layouts/sheafy/tree/default.html
@@ -3,6 +3,10 @@ layout: default
 ---
 
 <style>
+  ul.toc li.ellipsis {
+    height: 0;
+    overflow: hidden;
+  }
   section.ellipsis > header {
     opacity: 0.5;
     border-bottom: 3px dashed black;
