feat: search paolobrasolin/jekyll-sheafy#8
* feat: sketch search feature

* feat: make folded sections unfoldable

* fix: bad JS

* feat: lock search form when operating

* feat: better UI for search

* fix: spurious highlights

* refactor: thorough cleanup

* feat: save search in URL

* feat: inline help for search

* feat: focus input when opening search

* feat: explain ANDing

* feat: extend search scope

* fix: hide search outside of nodes

* fix: exclude nav from search highlighting

* feat: hide TOC items w/o matches

* refactor: split include and rename script

Co-authored-by: Jon Sterling <jon@jonmsterling.com>

--- a/_layouts/sheafy/tree/default.html
+++ b/_layouts/sheafy/tree/default.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+{% include search.html %}
+
 <article class="post">
   <nav>
     {% include breadcrumbs.html list=page.ancestors %}
